--- a/apps/yup-live/index.html
+++ b/apps/yup-live/index.html
@@ -5,21 +5,8 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin/>
-    <link rel="preconnect" href="https://yup.info.gf" crossorigin />
+    <link rel="preconnect" href="https://yup-live.pages.dev" crossorigin />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <title>YUP Live</title>
-    <meta name="title" content="YUP Live">
-    <meta name="description" content="Light open-source frontend to use YUP DAPP.">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://yup.info.gf">
-    <meta property="og:title" content="YUP Live">
-    <meta property="og:description" content="Light open-source frontend to use YUP DAPP.">
-    <meta property="og:image" content="https://yup.info.gf/share/og-default.png">
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://yup.info.gf">
-    <meta property="twitter:title" content="YUP Live">
-    <meta property="twitter:description" content="Light open-source frontend to use YUP DAPP.">
-    <meta property="twitter:image" content="https://yup.info.gf/share/og-default.png">
   </head>
   <body>
     <div id="app"></div>
