chore: add pages worker

--- a/apps/yup-live/index.html
+++ b/apps/yup-live/index.html
@@ -7,6 +7,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin/>
     <link rel="preconnect" href="https://yup-live.pages.dev" crossorigin />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <script>
+     if(window.location.hostname === 'paragraph.xyz.yup.live') {
+        window.location.href = 'https://yup.live';
+     }
+    </script>
   </head>
   <body>
     <div id="app"></div>
